--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
+rsa.public-key=classpath:/certs/public.pem
+rsa.private-key=classpath:/certs/private.pem
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hector1231926@gmail.com
+spring.mail.password=tnlikqlbehkdcvzj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
