--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ rsa.private-key=classpath:/certs/private.pem
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hector1231926@gmail.com
-spring.mail.password=tnlikqlbehkdcvzj
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
